basic API request for future python server

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,12 +23,14 @@
         <div class="hint">Accepts .txt and .pdf (multiple files allowed).</div>
         <p class="hint">or</p>
         <label for="emailText">Paste the email text</label>
-        <textarea name="emailText" id="email_text" placeholder="Paste the email content here..." rows="8"></textarea>
+        <textarea name="emailText" id="emailText" placeholder="Paste the email content here..." rows="8"></textarea>
 
         <button type="submit">Proccess document</button>
       </fieldset>
     </form>
     <div id="results"></div>
   </div>
+
+  <script src="app.js"></script>
 </body>
 </html>
