fix typo in html type

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
         <label for="emailFiles">Arquivos (.txt ou pdf)</label>
         <input
           id="emailFiles"
-          type="file"
+          type="files"
           accept=".txt,.pdf,text/plain,application/pdf"
           multiple
         >
