add names to input

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,8 @@
         <label for="emailFiles">Arquivos (.txt ou pdf)</label>
         <input
           id="emailFiles"
-          type="files"
+          name="files"
+          type="file"
           accept=".txt,.pdf,text/plain,application/pdf"
           multiple
         >
